# vectorbase

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
vectorbase/: .env.example  manage.py  schema.yaml.example
vectorbase/logs/: conf.py  services.py
vectorbase/logs/backends/: base.py  http.py  null.py  stdout.py
vectorbase/portal/: apps.py  config.py  forms.py  models.py  routers.py  search.py  urls.py  views.py
vectorbase/portal/management/commands/: generate_config.py
vectorbase/portal/migrations/: 0001_initial.py
vectorbase/portal/templates/portal/: 429.html  search.html
vectorbase/vectorbase/: asgi.py  settings.py  urls.py  wsgi.py
